--- a/E-Commerce.Web/appsettings.json
+++ b/E-Commerce.Web/appsettings.json
@@ -8,5 +8,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=.; Database = ECommerceDb; Trusted_Connection = True; TrustServerCertificate = True;"
+    },
+    "URLs": {
+        "BaseUrl": "https://localhost:7267/"
     }
 }
