--- a/E-Commerce.Web/appsettings.json
+++ b/E-Commerce.Web/appsettings.json
@@ -7,7 +7,9 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.; Database = ECommerceDb; Trusted_Connection = True; TrustServerCertificate = True;"
+        "DefaultConnection": "Server=.; Database = ECommerceDb; Trusted_Connection = True; TrustServerCertificate = True;",
+        "RedisConnectionString": "localhost",
+        "IdentityConnection": "Server=.; Database = ECommerceDb.Identity; Trusted_Connection = True; TrustServerCertificate = True;",
     },
     "URLs": {
         "BaseUrl": "https://localhost:7267/"
